# robotics

exercise08/paddle/: CMakeLists.txt  main_kuka_trace.cpp  main_paddle_only.cpp  paddle.cpp  paddle.h
exercise08/paddle/build2/: CMakeCache.txt  Makefile  cmake_install.cmake
exercise08/paddle/cmake/: copySrc.cmake  copySrc.cmake.in
exercise08/paddle/config/: motion-paddle_only.txt
